# warpong-3d

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  Trunk.toml  biome.json  index.html  package-lock.json  package.json
client/: Cargo.toml
client-babylon/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
client-babylon/public/: assets
client-babylon/scripts/: strip-anim-meshes.mjs
client-babylon/src/: AppState.ts  RenderLoop.ts  UIManager.ts  env.d.ts  i18n.ts  main.ts  (+1 more)
client-js/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: main.rs
client/src/config/: states.rs
client/src/modules/: mod.rs
client/src/modules/game/: ball.rs  mod.rs  paddle.rs  scoring.rs  setup.rs
client/src/modules/game/parts/: ai.rs  collision.rs  cosmetics.rs  mod.rs  physics.rs
client/src/modules/network/: client.rs  mod.rs  sync.rs
client/src/modules/network/parts/: websocket.rs
client/src/modules/shop/: mod.rs  purchase.rs  shop_ui.rs
client/src/modules/shop/parts/: catalog.rs  data.rs  mod.rs  save.rs
client/src/modules/ui/: game_over.rs  hud.rs  lobby.rs  menu.rs  mod.rs
client/src/modules/yandex/: ads.rs  auth.rs  leaderboard.rs  mod.rs
client/src/modules/yandex/parts/: bindings.rs  callbacks.rs  mod.rs
client/src/shared/: components.rs  events.rs
dev/: sdk_stub.js
js/: yandex_sdk.js
landing/: Dockerfile  index.html  package-lock.json  package.json
scripts/: create_zombie_lod.py
server/: Dockerfile  package.json  tsconfig.json
shared/: Cargo.toml
(+143 files in other folders)
